[package]
name = "day-night-shader-native"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
futures-channel = "0.3.28"
hyper = { version="0.14.26", features = ["full"] }
log = "0.4.19"
png = "0.17.9"
pretty_env_logger = "0.5.0"
sfml = "0.20.0"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
