[package]
name = "day-night-shader-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
glsl = "6.0.2"
httparse = "1.8.0"
image = "0.24.6"
png = "0.17.9"
sfml = "0.20.0"
url = "2.4.0"
