[package]
name = "day-night-shader-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4.3.4", features = ["derive"] }
futures-channel = "0.3.28"
glsl = "6.0.2"
httparse = "1.8.0"
hyper = { version="0.14.26", features=["full"] }
image = "0.24.6"
log = "0.4.19"
png = "0.17.9"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features=["derive"] }
sfml = "0.20.0"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
url = "2.4.0"
